--- a/app/globals.css
+++ b/app/globals.css
@@ -135,16 +135,19 @@
   margin-bottom: 10px;
 }
 
-.info-box {
+/* .info-box {
   position: absolute;
-  top: 50%;  /* Adjust positioning as needed */
-  left: 10%; /* Adjust positioning as needed */
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(255, 255, 255, 0.9);
   border: 1px solid #ccc;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   animation: fadeIn 0.5s ease;
-}
+} */
 
 @keyframes fadeIn {
   from {
