--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,6 @@
 .gradient-background {
   background: linear-gradient(350deg, var(--color-secondary-bg), var(--color-black), var(--color-secondary-bg));
   background-size: 180% 180%;
-  /* animation: gradient-animation 5s ease infinite; */
 }
 
 @keyframes gradient-animation {
@@ -135,20 +134,6 @@
   margin-bottom: 10px;
 }
 
-/* .info-box {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(255, 255, 255, 0.9);
-  border: 1px solid #ccc;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  animation: fadeIn 0.5s ease;
-} */
-
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -160,3 +145,16 @@
   }
 }
 
+.flavour-gradient {
+  background: linear-gradient(90deg, #1c0243, #4b088a, #6b12a4);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.love-gradient {
+  background: linear-gradient(90deg, #5523a0, #7a3fd4, #a064f9);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
